@@ -1,67 +1,0 @@
-<!-- Ant build file for MiniTemplator Java version -->
-<project name="miniTemplator" default="package">
-
-<target name="clean" description="Deletes the target directory.">
- <delete dir="target" failonerror="true"/>
-</target>
-
-<target name="compile" description="Compiles the source files.">
- <mkdir dir="target/classes"/>
- <javac srcdir="src/main/java" destdir="target/classes"
-    deprecation="true" includeAntRuntime="false" debug="true" debuglevel="lines,source"
-    source="1.5" target="1.5">
-  <compilerarg line="-Xlint -Xlint:-path -Xlint:-options -Xmaxerrs 5 -Xmaxwarns 5"/>
- </javac>
-</target>
-
-<target name="package" depends="compile" description="Builds the JAR file.">
- <jar destfile="target/miniTemplator.jar">
-  <fileset dir="target/classes"/>
- </jar>
-</target>
-
-<target name="javaDoc" description="Generates the API documentation (JavaDoc)">
- <delete dir="target/javadoc" failonerror="true"/>
- <mkdir dir="target/javadoc"/>
- <javadoc sourcepath="src/main/java" destdir="target/javadoc" failonerror="true"
-    nodeprecatedlist="true" notree="true" noindex="true" nohelp="true"
-    link="http://download.oracle.com/javase/6/docs/api/"
-    bottom="&lt;br&gt;&lt;span style='font-size: 10pt; font-family: Arial, Helvetica, sans-serif'&gt;Home page: &lt;a href='http://www.source-code.biz/MiniTemplator' target='_top'&gt;www.source-code.biz/MiniTemplator&lt;/a&gt;&lt;/span&gt;"/>
-    <!-- We need access="protected" (=default) to list protected members! -->
-</target>
-
-<target name="runExample1" description="Compiles and runs the Example1 program.">
- <antcall target="runExample"><param name="exampleName" value="Example1"/></antcall>
-</target>
-<target name="runExample2" description="Compiles and runs the Example2 program.">
- <antcall target="runExample"><param name="exampleName" value="Example2"/></antcall>
-</target>
-
-<target name="runExample" depends="package" description="Subtask to compile and run one of the example programs.">
- <mkdir dir="target/example-classes"/>
- <javac srcdir="src/examples" includes="${exampleName}.java"
-    sourcepath="" deprecation="true" includeAntRuntime="false" debug="true" debuglevel="lines,source"
-    classpath="target/miniTemplator.jar"
-    destdir="target/example-classes">
-  <compilerarg line="-Xlint -Xmaxerrs 5"/>
- </javac>
- <mkdir dir="target/examples-output"/>
- <java classname="${exampleName}" failonerror="true">
-  <classpath>
-   <pathelement location="target/example-classes"/>
-   <pathelement location="target/miniTemplator.jar"/>
-  </classpath>
- </java>
-</target>
-
-<target name="buildDistribZip" description="Builds the distribution ZIP file.">
- <antcall target="clean"/>
- <antcall target="package"/>
- <antcall target="javaDoc"/>
- <zip destfile="target/MiniTemplator-java.zip">
-  <zipfileset dir="."
-   includes="build.xml, CHANGES.txt, README.txt, MiniTemplator.html, src/, target/miniTemplator.jar, target/javadoc/"/>
- </zip>
-</target>
-
-</project>
