@@ -64,8 +64,8 @@
             <artifactId>maven-compiler-plugin</artifactId>
             <version>2.3</version>
             <configuration>
-                <source>1.5</source>
-                <target>1.5</target>
+                <source>1.6</source>
+                <target>1.6</target>
             </configuration>
         </plugin>
       
